--- a/assets/css/less_parts/variables.less
+++ b/assets/css/less_parts/variables.less
@@ -1,10 +1,10 @@
 /*====================================================
 	COLOR VARIABLE FOR THEME
 ====================================================*/
-@theme-color: #00ada7;        // theme color
-@secondary-color: #00b1d1;				// secondary theme color
+@theme-color: #26a2c7;        // theme color
+@secondary-color: #764ea2;				// secondary theme color
 @hover-color: #003e7c;
-@bg-color: #ebebeb;					// Background color / secndary theme color
+@bg-color: #efefef;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
 @bg-color-footer: #202020;			// Footer background color
 @bg-color-footer-dark: #111111;		// Footer dark background color
