--- a/author.hbs
+++ b/author.hbs
@@ -9,7 +9,9 @@
 			<!-- start main post area -->
 			<div class="col-md-8 main-content">
 				{{> cover-author}}
+				<div class="postlist">
 				{{> loop}}
+			</div>
 				{{pagination}}
 			</div>
 			<!-- end main post area -->
