--- a/index.hbs
+++ b/index.hbs
@@ -7,11 +7,12 @@
 			<!-- end main post area -->
 			{{! insert sidebar partial}}
 			{{> sidebar}}
-			<!-- start main post area -->
-			<div class="col-md-8 main-content">
-				{{> loop}}
-				{{pagination}}
-			</div>
+				<!-- start main post area -->
+				<div class="col-md-8 main-content">
+					<div class="postlist">
+						{{> loop}} {{pagination}}
+					</div>
+				</div>
 
 		</div>
 	</div>
