--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -71,11 +71,6 @@ h2 {
   justify-content: center;
   flex-direction: column;
 }
-@media (max-width: 800px) {
-  .home-template .main-navigation {
-    margin-bottom: 10px;
-  }
-}
 .h3,
 h3 {
   font-size: 1.5em;
@@ -294,6 +289,11 @@ pre {
   background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
   background-size: cover;
 }
+@media (max-width: 800px) {
+  .main-header {
+    padding: 30px 0;
+  }
+}
 .main-header .branding {
   font-size: 3.5em;
   font-family: 'mr-eaves-xl-modern', serif;
@@ -345,6 +345,7 @@ pre {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: 500;
+  transition: all 0.2s ease-out;
 }
 @media (max-width: 600px) {
   .main-navigation .menu li a {
@@ -352,12 +353,14 @@ pre {
   }
 }
 .main-navigation .menu li:hover > a {
-  color: #764ea2;
+  text-shadow: 0px 0px 10px #b41eda, 0px 0px 5px #a341bb;
   text-decoration: none;
   cursor: pointer;
+  color: white;
 }
 .main-navigation .menu li.nav-current a {
-  color: #141624;
+  color: #2a3371;
+  font-weight: 600;
 }
 .main-navigation .menu li ul {
   visibility: hidden;
@@ -386,7 +389,6 @@ pre {
   color: #505050;
 }
 .main-navigation .menu li ul:hover > a {
-  color: #26a2c7;
   cursor: pointer;
 }
 .main-navigation .menu li:hover ul {
@@ -462,7 +464,7 @@ pre {
 }
 .post .roundup {
   position: absolute;
-  background: #3b2751;
+  background: #81a1ab;
   color: white;
   text-align: center;
   top: -12px;
@@ -1338,7 +1340,7 @@ p {
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 600px) {
+@media (max-width: 800px) {
   .page-template .link-preview,
   .post-template .link-preview {
     width: 100%;
@@ -1613,16 +1615,16 @@ p {
   .post-preview.tag-video .post-content {
     margin: 0;
   }
-  .post-template .main-header {
-    display: none;
-  }
-  #main-menu {
+  .main-header {
     border: 0;
   }
-  #main-menu a {
+  .main-header .branding {
+    display: none;
+  }
+  .main-header a {
     color: white;
   }
-  .post-template #main-menu li {
+  #main-menu li {
     padding: 20px 0;
   }
   .row {
@@ -1630,8 +1632,8 @@ p {
     margin-left: 0;
   }
   .main-navigation {
-    padding: 0 20px;
-    margin-bottom: 0;
+    padding: 0;
+    margin: 0;
     border: 0;
   }
   .main-navigation .container {
@@ -1722,6 +1724,11 @@ p {
   .page-template .main-navigation,
   .post-template .main-navigation {
     margin-bottom: 0;
+  }
+}
+@media (max-width: 800px) and (max-width: 800px) {
+  .main-header {
+    padding: 10px 0 10px;
   }
 }
 @media (max-width: 800px) {
