--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -68,7 +68,6 @@ h2 {
 		justify-content: center;
 		flex-direction: column;
 	}
-
 }
 
 .h3,
@@ -241,6 +240,14 @@ pre {
 }
 
 .post-preview {
+	.featured-media {
+		border: 1px solid #ebebeb;
+		box-sizing: border-box;
+		overflow: visible;
+		width: 99%;
+		margin: auto;
+	}
+
 	.post-meta,
 	.post-title,
 	h5 {
@@ -305,9 +312,9 @@ pre {
 	padding: 42px 0;
 	background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
 	background-size: cover;
-
-	@media(max-width: 800px){
+	@media(max-width: 800px) {
 		padding: 30px 0;
+		background: @theme-color;
 	}
 
 	.branding {
@@ -351,8 +358,8 @@ pre {
 		padding: 0;
 		margin: 0 auto;
 		display: flex;
-		justify-content: space-around;
-		max-width: 444px;
+		justify-content: space-between;
+		max-width: 400px;
 
 		li {
 			list-style: none;
@@ -365,29 +372,28 @@ pre {
 				// text-transform: capitalize;
 				line-height: 1;
 				display: block;
-				padding: 0 20px;
+				padding: 0;
 				font-family: 'mr-eaves-xl-modern', serif;
 				text-transform: uppercase;
 				font-size: 20px;
 				font-weight: 500;
-				transition: all .2s ease-out;
+				transition: all 0.2s ease-out;
 				@media(max-width: 600px) {
 					padding: 0;
 				}
 			}
 
 			&:hover > a {
-				text-shadow: 0px 0px 10px #b41eda, 0px 0px 5px #a341bb;
+				text-shadow: 0 0 20px #b41eda;
 				text-decoration: none;
 				cursor: pointer;
-				color:white;
+				color: white;
 			}
 
 			&.nav-current {
 				a {
 					color: #2a3371;
-    			font-weight: 600;
-
+					font-weight: 600;
 				}
 			}
 
@@ -412,7 +418,6 @@ pre {
 				}
 
 				&:hover > a {
-					color: @theme-color;
 					cursor: pointer;
 				}
 			}
@@ -586,11 +591,8 @@ pre {
 	}
 
 	.featured-media {
-		overflow: hidden;
-
 		img {
 			width: 100%;
-			border: 1px solid #ebebeb;
 		}
 
 		a {
@@ -604,7 +606,7 @@ pre {
 	}
 
 	.post-content {
-		margin: 20px 10px;
+		margin: 0 10px;
 		overflow-x: hidden;
 		clear: both;
 
@@ -1484,7 +1486,6 @@ p {
 		margin: 20px auto;
 		background-color: #ffffff;
 		box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-
 		@media(max-width: 800px) {
 			width: 100%;
 		}
@@ -1751,12 +1752,11 @@ p {
 		}
 	}
 
-
-		.main-header {
-			@media(max-width: 800px){
-				padding: 10px 0 10px
-			}
+	.main-header {
+		@media(max-width: 800px) {
+			padding: 10px 0;
 		}
+	}
 
 	.main-header {
 		border: 0;
@@ -1770,10 +1770,9 @@ p {
 		}
 	}
 
-
-		#main-menu li {
-			padding: 20px 0;
-		}
+	#main-menu li {
+		padding: 20px 0;
+	}
 
 	.row {
 		margin-right: 0;
@@ -1781,7 +1780,7 @@ p {
 	}
 
 	.main-navigation {
-		padding: 0;
+		padding: 0 6%;
 		margin: 0;
 		border: 0;
 
@@ -1856,7 +1855,7 @@ p {
 				.post-content {
 					margin: 0 !important;
 					overflow-x: hidden;
-					padding: 10px 6% 20px;
+					padding: 20px 6%;
 				}
 			}
 
