--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -5,6 +5,7 @@
 	<div class="container">
 		<div class="row">
 			<!-- start main post area -->
+
 			{{> sidebar}}
 			<div class="col-md-8 main-content">
 				<!-- start post -->
@@ -21,9 +22,9 @@
 							{{content}}
 							<div>
 								<h2>Activity Feed</h2>
-								<div class="feed"> </div>
+								<div class="feed"><img src="https://hackers.nyc3.digitaloceanspaces.com/load.gif"></div>
 								<h2>Our Repositories</h2>
-								<div class="repos"> </div>
+								<div class="repos"><img src="https://hackers.nyc3.digitaloceanspaces.com/load.gif"></div>
 							</div>
 
 						</div>
@@ -37,5 +38,4 @@
 	</div>
 </section>
 <script src="{{asset "/js/repos.js"}}"></script>
-<script src="{{asset "/js/jquery-ui.min.js"}}"></script>
 <!-- end site's main content area -->
